[tool.poetry]
name = "rpg-tools"
version = "0.1.0"
description = "Suite of tools for running RPGs with little preparation"
authors = ["sudo-julia <jlearning@tuta.io>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^4.14.0"
faker-starship = "^0.0.1-alpha.1"
python-dateutil = "^2.8.1"
regex = "^2020.10.28"
six = "^1.15.0"
text-unidecode = "^1.3"
PySimpleGUI = "^4.30.0"
rich = "^9.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
